require phpword library

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
         "maatwebsite/excel": "^3.1",
-        "php-ai/php-ml": "^0.8.0"
+        "php-ai/php-ml": "^0.8.0",
+        "phpoffice/phpword": "^0.16.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
